estilo: o estilo foi atualizado, novos produtos foram adicionados como placas de video, teclado, mouse e monitor alem de um banner que passa 4 propagandas

--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -108,12 +108,38 @@ ul li input {
   display: flex;
   flex-direction: column;
   margin-top: 6rem;
-  background-color: #FF6500;
+}
+.container .anuncio {
+  width: 100% rem;
+  height: 14rem;
+  display: flex;
+  flex-direction: row;
+  background-color: red;
+  overflow: hidden;
+  margin-bottom: 1rem;
+}
+.container .anuncio .anunciochild {
+  display: flex;
+  flex-direction: row;
+  transition: 1s;
+}
+.container .anuncio .an {
+  width: 70rem;
+  height: 100%;
 }
 .container .destaques {
   font-size: 2rem;
-  margin: 3px;
+  margin-top: 20px;
+  padding-left: 1rem;
   color: #ffffff;
+  background-color: #FF6500;
+  font-family: "Bebas Neue", cursive;
+}
+.container .subdestaques {
+  padding-top: 2rem;
+  font-size: 2rem;
+  padding-left: 1rem;
+  background-color: #f6f6f6;
   font-family: "Bebas Neue", cursive;
 }
 .container .produtos {
@@ -136,9 +162,9 @@ ul li input {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-left: 1rem;
+  margin-left: 1.4rem;
   margin-top: 0.5rem;
-  max-width: 11rem;
+  width: 12rem;
   height: 19rem;
   background-color: #ffffff;
   border-radius: 10px;
